todo: implement game callback interface